--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,7 @@ body {
     padding: 0;
     text-align: center;
     text-align: center;
-   background: linear-gradient(217deg, rgba(0, 116, 164, 0.8), rgba(255,0,0,0) 70.71%),
-               linear-gradient(127deg, rgba(0, 98, 93, 0.8), rgba(0,255,0,0) 70.71%),
-               linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+   background: rgba(30,39,73,0.8)
     color: white;
 }
 
