--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 :root {
   --primary: #2c3e50;
   --accent: #2980b9;
-  --background: #f4f4f4;
-  --text: #333;
+  --background: #020887;
+  --text: #7D82B8;
 }
 .content {
   max-width: 800px;
@@ -24,7 +24,6 @@ body {
     text-align: center;
     text-align: center;
    background: rgba(30,39,73,0.8)
-    color: white;
 }
 
 nav {
