--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     padding: 0;
     text-align: center;
     text-align: center;
-   background: rgba(30,39,73,0.8)
+   background: rgba(28,32,51,1)
 }
 .letter-container {
     max-width: 800px;            /* keeps it from stretching too wide */
@@ -36,7 +36,7 @@ body {
 }
 
 nav {
-    background: rgba(0, 29, 66, 0.8);
+    background: rgba(28,32,51,1);
     padding: 15px;
     position: fixed;
     width: 100%;
@@ -66,7 +66,7 @@ p {
 }
 
 .content {
-    background: rgba(0, 0, 127, 0.8); 
+    background: rgba(28,32,51,1); 
     padding: 20px;
     border-radius: 10px;
     display: inline-block;
