--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,16 @@
 body {
   background-color: var(--background);
   color: var(--text);
-}
-
-body {
-    font-family: Poppins, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    text-align: center;
-   background: rgba(28,32,51,1)
+  font-family: Poppins, sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background: rgba(28,32,51,1)
+  background-image: url('Untitled-Artwork.png');
+  background-position: center;
+  background-image: url('images/Untitled-Artwork.png');
+  background-repeat: repeat;
+  background-size: 100px 100px;
 }
 .letter-container {
     max-width: 800px;            /* width u idiot */
@@ -78,9 +79,6 @@ h1 {
     font-weight: 600;
 }
 
-p {
-    font-size: 18px;
-}
 
 .btn {
     display: inline-block;
@@ -101,13 +99,5 @@ p {
     transform: scale(1.05);
 }
 body {
-  background-image: url('your-art.png');
-  background-size: cover; 
-  background-position: center;
-  background-repeat: no-repeat;
-}
-body {
-  background-image: url('images/Untitled-Artwork.png');
-  background-repeat: repeat;
-  background-size: 100px 100px;
+
 }
