--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,18 @@
 body {
   background-color: var(--background);
   color: var(--text);
-}
-
-body {
     font-family: Poppins, sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
     text-align: center;
    background: rgba(28,32,51,1)
+  background-image: url('Untitled-Artwork.png');
+  background-size: cover; /* or contain/repeat */
+  background-position: center;
+  background-repeat: repeat;
 }
+
 .letter-container {
     max-width: 800px;            /* keeps it from stretching too wide */
     margin: 0 auto;              /* centers the content horizontally */
@@ -99,10 +101,4 @@ p {
 .btn:hover {
     background: #0041accc;
     transform: scale(1.05);
-}
-body {
-  background-image: url('your-art.png');
-  background-size: cover; /* or contain/repeat */
-  background-position: center;
-  background-repeat: no-repeat;
 }
