--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   text-align: center;
 
   background: rgba(28,32,51,1); 
-  background-image: url('Untitled-Artwork.png');
+  background-image: url('Untitled_Artwork.png');
   background-size: cover;
   background-position: center;
   background-repeat: repeat;
