--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,16 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-
   background: rgba(28,32,51,1); 
+}
+
+body.home {
   background-image: url('Untitled_Artwork.png');
   background-size: 80px;
-  background-position: center;
   background-repeat: repeat;
+  background-position: center;
+  background-color: rgba(28, 32, 51, 1);
+  opacity: 0.2; /* we'll fix this below */
 }
 
 
