--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,21 @@ body.home {
   background-repeat: repeat;
   background-position: center;
   background-color: rgba(28, 32, 51, 1);
-  opacity: 0.2; /* we'll fix this below */
+}
+
+body.home::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: url('Untitled_Artwork.png');
+  background-size: 80px;
+  background-repeat: repeat;
+  background-position: center;
+  opacity: 0.3; 
+  z-index: -1;
 }
 
 
