--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,10 @@ body {
   padding: 0;
   text-align: center;
   background: rgba(28,32,51,1); 
+  position: relative;
+  z-index: 0;
 }
+
 
 body.home {
   background-image: url('Untitled_Artwork.png');
@@ -45,6 +48,7 @@ body.home::before {
   opacity: 0.3; 
   z-index: -1;
 }
+
 
 
 .letter-container {
