--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,10 @@ body.home {
 }
 */
 body.home::before {
-  /*
+ 
   content: "";
   position: fixed;
-  top: 0;
+ /* top: 0;
   left: 0;
   height: 100%;
   width: 100%;*/
