--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,10 @@ body.home::before {
  
   content: "";
   position: fixed;
- /* top: 0;
+  top: 0;
   left: 0;
   height: 100%;
-  width: 100%;*/
+  width: 100%;
   background-image: url('Untitled_Artwork.png');
   background-size: 80px;
   background-repeat: repeat;
