--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ body.letters::before {
   opacity: 0.3; 
   z-index: -1;
 }
-/*
+
 body.poetry {
   background-size: 80px;
   background-repeat: repeat;
@@ -113,7 +113,7 @@ body.poetry::before {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: url('Untitled_Artwork.png');
+  background-image: url('poetry.png');
   background-size: 80px;
   background-repeat: repeat;
   background-position: center;
@@ -121,7 +121,7 @@ body.poetry::before {
   opacity: 0.3; 
   z-index: -1;
 }
-
+/*
 body.art {
   background-size: 80px;
   background-repeat: repeat;
