--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ body.poetry::before {
   opacity: 0.3; 
   z-index: -1;
 }
-/*
+
 body.art {
   background-size: 80px;
   background-repeat: repeat;
@@ -137,7 +137,7 @@ body.art::before {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: url('Untitled_Artwork.png');
+  background-image: url('art.png');
   background-size: 80px;
   background-repeat: repeat;
   background-position: center;
@@ -145,7 +145,7 @@ body.art::before {
   opacity: 0.3; 
   z-index: -1;
 }
-
+/*
 body.posts {
   background-size: 80px;
   background-repeat: repeat;
