--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ body.posts::before {
   opacity: 0.3; 
   z-index: -1;
 }
-/*
+
 body.contact {
   background-size: 80px;
   background-repeat: repeat;
@@ -185,7 +185,7 @@ body.contact::before {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: url('Untitled_Artwork.png');
+  background-image: url('contact.png');
   background-size: 80px;
   background-repeat: repeat;
   background-position: center;
@@ -193,7 +193,7 @@ body.contact::before {
   opacity: 0.3; 
   z-index: -1;
 }
-
+/*
 body.editor {
   background-size: 80px;
   background-repeat: repeat;
