--- a/styles.css
+++ b/styles.css
@@ -259,7 +259,7 @@ p {
     font-size: 20px;
 }
 
-.content {
+.letter-container {
     background: rgba(28,32,51,1); 
     padding: 20px;
     border-radius: 10px;
