--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 .content {
   max-width: 800px;
-  margin: 0 auto;
+  margin-top: 100px;
   padding: 40px 20px;
   text-align: left;
   
@@ -267,11 +267,17 @@ p {
 }
 
 .letter-container {
-    background: rgba(28,32,51,1); 
-    padding: 20px;
-    border-radius: 10px;
     display: inline-block;
     margin-top: 120px;
+    max-width: 800px;
+    padding: 40px 20px;
+    text-align: left;
+  
+
+    background: rgba(0, 0, 0, 0.5); 
+    border-radius: 10px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    backdrop-filter: blur(4px);
 }
 
 h1 {
